results/SVCOMP/4-shot/log-ExSymExeLongBytecodes-2024_03_18_22_01_41.txt
class Main {

  //@ requires x > 0 || x <= 0;
  //@ requires z > 0 || z <= 0;
  //@ ensures \result ==> (x - z <= 34565);
  //@ ensures \result ==> (x + z < 5);
  //@ ensures \result ==> (x - z >= 0);
  //@ ensures \result ==> (z - 19999999999L <= 0);
  //@ ensures \result ==> (9999999999L - x <= 0);
  //@ ensures \result ==> (x * z <= 0);
  //@ ensures \result ==> (x * 19999999999L <= 0);
  //@ ensures \result ==> (19999999999L * z <= 0);
  public static boolean f(long x) {
    x = x > 0 ? -x : x;
    long y = 5;
    Main inst = new Main();
    return inst.test(x, y);
  }

  //@ requires x > 0 || x <= 0;
  //@ requires z > 0 || z <= 0;
  //@ ensures \result ==> (x - z <= 34565);
  //@ ensures \result ==> (x + z < 5);
  //@ ensures \result ==> (x - z >= 0);
  //@ ensures \result ==> (z - 19999999999L <= 0);
  //@ ensures \result ==> (9999999999L - x <= 0);
  //@ ensures \result ==> (x * z <= 0);
  //@ ensures \result ==> (x * 19999999999L <= 0);
  //@ ensures \result ==> (19999999999L * z <= 0);
  public static boolean test(long x, long z) { // invokestatic
    long a = x;
    long b = z;
    long c = 34565;

    long negate = -z; // LNEG

    long sum = a + b; // LADD
    long sum2 = z + 9090909L; // LADD
    long sum3 = 90908877L + z; // LADD

    long diff = a - b; // LSUB
    long diff2 = b - 19999999999L; // LSUB
    long diff3 = 9999999999L - a; // LSUB

    long mul = a * b; // LMUL
    long mul2 = a * 19999999999L; // LMUL
    long mul3 = 19999999999L * b; // LMUL

    if (diff > c) {
      return false;
    } else System.out.println("branch diff <= c");
    if (sum < z) System.out.println("branch sum < z");
    else
      System.out.println("branch sum >= z");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:4: error: cannot find symbol
  //@ requires z > 0 || z <= 0;
               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:4: error: cannot find symbol
  //@ requires z > 0 || z <= 0;
                        ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:5: error: cannot find symbol
  //@ ensures \result ==> (x - z <= 34565);
                               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:6: error: cannot find symbol
  //@ ensures \result ==> (x + z < 5);
                               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:7: error: cannot find symbol
  //@ ensures \result ==> (x - z >= 0);
                               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:8: error: cannot find symbol
  //@ ensures \result ==> (z - 19999999999L <= 0);
                           ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:10: error: cannot find symbol
  //@ ensures \result ==> (x * z <= 0);
                               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLongBytecodes.java:12: error: cannot find symbol
  //@ ensures \result ==> (19999999999L * z <= 0);
                                          ^
  symbol:   variable z
  location: class Main
8 errors

